--- a/nfchelper/src/main/AndroidManifest.xml
+++ b/nfchelper/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.spexco.nfcmifareclassiclibrary">
+          package="com.yenen.ahmet.nfcmifareclassiclibrary">
     <uses-permission android:name="android.permission.NFC"/>
 </manifest>
