--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation project(':nfchelper')
+
+    //implementation 'com.github.yenenahmet:NfcCard:0.1.0'
 }
